Fixed animation on mobile nav, updated some colors and links in navigation (inlcuded blog).

--- a/assets/css/_albums.scss
+++ b/assets/css/_albums.scss
@@ -16,7 +16,7 @@
 
 .bandcamp-wrapper {
   margin: 4rem;
-  padding: 15% 5%;
+  padding: 10% 5%;
   border-radius: 40% 60%;
   background: $blue__light;
   box-shadow: 34px 4px 0px 20px rgba($blue__light-x, 1); 
