--- a/assets/css/_navbar.scss
+++ b/assets/css/_navbar.scss
@@ -4,7 +4,7 @@
 nav.navbar {
   @include flex(row, space-around, center);
   z-index: 1;
-  background: $blue__dark;
+  background: $new_blue;
   color: $white;
   padding: 1rem;
   box-shadow: 2px 2px 12px 2px rgba(0,0,0,0.1);
@@ -25,6 +25,7 @@ nav.navbar {
     font-size: 1.8rem;
     letter-spacing: 1px;
     cursor: pointer;
+    font-weight: 600;
     @include mobile {
       font-size: 1.5rem;
     }
@@ -35,17 +36,17 @@ nav.navbar {
     font-weight: 700;
   }
   .mobile-nav__container {
-    background: $blue__dark;
     z-index: -1;
     @include flex(row, space-between, center);
     @include nav-collapse {
+      background: $new_blue;
       margin-top: 50px;
       position: fixed;
       right: 0;
       top: 0;
       transform: translateY(-200%);
       width: 100%;
-      transition: all 0.25s;
+      transition: all 0.1s;
       z-index: -99;
     }
   }
@@ -53,7 +54,7 @@ nav.navbar {
     @include flex(row, center, center);
     list-style: none;
     @include nav-collapse {
-      @include flex(column, space-evenly, flex-start);
+      @include flex(row, space-evenly, center);
       padding: 2rem 0;
     }
     @include mobile {
@@ -64,7 +65,7 @@ nav.navbar {
       cursor: pointer;
       transition: all 0.25s;
       @include nav-collapse {
-        transform: translateX(-500%);
+        transform: translateX(-100%);
         font-size: 1.4rem;
         padding-left: 2rem;
         margin-top: 1rem;
@@ -84,7 +85,7 @@ nav.navbar {
     }
     @for $i from 1 through 6 {
       .nav__link.appear-#{$i} {
-        animation: mobile-navigation 800ms ease-in-out #{$i / 12}s 1 forwards;
+        animation: mobile-navigation-enter 800ms ease #{$i / 12}s 1 forwards;
       }
     }
   }
@@ -113,7 +114,7 @@ nav.navbar {
 
 footer.navbar {
   @include flex(column, space-around, center);
-  background: $blue__dark;
+  background: $new_blue;
   color: $white;
   padding: 1rem;
   box-shadow: 2px 2px 12px 2px rgba(0,0,0,0.1);
@@ -143,7 +144,7 @@ footer.navbar {
     }
   }
   .nav__icon {
-    @include icon_hover(32px, invert(0.5), invert(1));
+    @include icon_hover(32px, invert(1), invert(1));
   }
   .footer__social {
     @include flex(row, space-around, center);
@@ -154,12 +155,17 @@ footer.navbar {
   }
 }
 
-@keyframes mobile-navigation {
-  0% { transform: translateX(-500%); opacity: 0;};
+@keyframes mobile-navigation-enter {
+  0% { transform: translateX(-100%); opacity: 0;};
   30% { transform: translateX(50%); };
   60% { transform: translateX(0%); opacity: 1; };
   80% { transform: translateX(8%); };
   100% { transform: translateX(0%); opacity: 1;};
+}
+
+@keyframes mobile-navigation-exit {
+  0% { transform: translateX(0%); };
+  100% { transform: translateX(-100%); };
 }
 
 @keyframes close-mobile-navigation {
