--- a/assets/css/style2.scss
+++ b/assets/css/style2.scss
@@ -13,6 +13,8 @@
     width: 950px;
     margin: 0 auto;
     position: relative;
+    opacity: 0;
+    transition: all 0.5s ease;
     @include nav-collapse {
       width: 100%;
     }
@@ -65,7 +67,7 @@
         display: inline-block;
         font-family: 'Fira Sans', arial, sans-serif;
         font-size: 2.5rem;
-        color: $gray__dark;
+        color: $new_blue_2;
         margin-bottom: 10px;
         letter-spacing: 1px;
         font-weight: 900;
